# NekoMimi-plus-plus

./: .gitignore  CMakeLists.txt  README.md  build.sh  feature_list.md  versionBump.py
.github/workflows/: linux.yml
debian/DEBIAN/: changelog  control
debian/usr/include/NMPP/: Converters.hpp
debian/usr/lib/x86_64-linux-gnu/: libNMPP.so.0  libNMPP.so.0.1.5
header/: BinaryReader.cpp  BinaryReader.hpp  Conditions.hpp  Converters.cpp  Converters.hpp  FileIO.cpp  FileIO.hpp  Operators.cpp  Operators.hpp  Utils.hpp  meta.cpp  outTools.cpp  outTools.hpp
source/: BinaryReader.cpp  Conditions.cpp  Converters.cpp  FileIO.cpp  Operators.cpp  Utils.cpp  meta.cpp  outTools.cpp
tests/: .gitignore  CMakeLists.txt  color.cpp  convert.cpp  files.cpp
